--- a/HsLogic/HsLogic.csproj
+++ b/HsLogic/HsLogic.csproj
@@ -36,6 +36,7 @@
     <TypeScriptCompile Include="src\core\Entity.ts" />
     <TypeScriptCompile Include="src\core\Zone.ts" />
     <TypeScriptCompile Include="src\core\ZoneExceptions.ts" />
+    <TypeScriptCompile Include="src\def\helper\defAction\AttackHealthEnchant.ts" />
     <TypeScriptCompile Include="src\hsTest\DrawTest.ts" />
     <TypeScriptCompile Include="src\hs\Const.ts" />
     <TypeScriptCompile Include="src\hs\core\Action.ts" />
@@ -43,36 +44,36 @@
     <TypeScriptCompile Include="src\hs\core\context\HsContext.ts" />
     <TypeScriptCompile Include="src\hs\core\context\IContextUtils.ts" />
     <TypeScriptCompile Include="src\hs\core\HsZone.ts" />
-    <TypeScriptCompile Include="src\hs\def\Aliases.ts" />
-    <TypeScriptCompile Include="src\hs\def\Const.ts" />
-    <TypeScriptCompile Include="src\hs\def\elements\IDefAction.ts" />
-    <TypeScriptCompile Include="src\hs\def\elements\IDefMetadata.ts" />
-    <TypeScriptCompile Include="src\hs\def\elements\IDefEntities.ts" />
-    <TypeScriptCompile Include="src\hs\def\elements\IDefTargetDefinition.ts" />
-    <TypeScriptCompile Include="src\hs\def\elements\IDefTrigger.ts" />
-    <TypeScriptCompile Include="src\hs\def\elements\Tags.ts" />
-    <TypeScriptCompile Include="src\hs\def\helper\defAction\DefBuffAction.ts" />
-    <TypeScriptCompile Include="src\hs\def\helper\defTargetDefinition\SimpleTargetDefinition.ts" />
-    <TypeScriptCompile Include="src\hs\def\helper\defTargetDefinition\_OPTIONAL_TARGET.ts" />
-    <TypeScriptCompile Include="src\hs\def\helper\defTargetDefinition\_TARGET.ts" />
-    <TypeScriptCompile Include="src\hs\def\helper\targetSetBuilder\builders\EntitySetBuilder.ts" />
-    <TypeScriptCompile Include="src\hs\def\helper\targetSetBuilder\builders\TriggerSetBuilder.ts" />
-    <TypeScriptCompile Include="src\hs\def\helper\targetSetBuilder\filters\Filters.ts" />
-    <TypeScriptCompile Include="src\hs\def\helper\targetSetBuilder\filters\TargetFilters.ts" />
-    <TypeScriptCompile Include="src\hs\def\helper\targetSetBuilder\filters\StandardFilters.ts" />
-    <TypeScriptCompile Include="src\hs\def\helper\targetSetBuilder\ITargetSetBuilder.ts" />
-    <TypeScriptCompile Include="src\hs\def\helper\targetSetBuilder\TargetFinder.ts" />
-    <TypeScriptCompile Include="src\hs\def\helper\trigger\AuraGenerator.ts" />
-    <TypeScriptCompile Include="src\hs\def\helper\trigger\Deathrattle.ts" />
-    <TypeScriptCompile Include="src\hs\def\helper\trigger\Enrage.ts" />
-    <TypeScriptCompile Include="src\hs\def\helper\trigger\LifeLink.ts" />
-    <TypeScriptCompile Include="src\hs\def\helper\trigger\MinionOriginAuraGenerator.ts" />
-    <TypeScriptCompile Include="src\hs\def\outdated\action\AllTargetsDefAction.ts" />
-    <TypeScriptCompile Include="src\hs\def\outdated\action\SingleTargetDefAction.ts" />
-    <TypeScriptCompile Include="src\hs\def\outdated\action\TwoStepsTargetsDefAction.ts" />
+    <TypeScriptCompile Include="src\def\Aliases.ts" />
+    <TypeScriptCompile Include="src\def\Const.ts" />
+    <TypeScriptCompile Include="src\def\elements\IDefAction.ts" />
+    <TypeScriptCompile Include="src\def\elements\IDefMetadata.ts" />
+    <TypeScriptCompile Include="src\def\elements\IDefEntities.ts" />
+    <TypeScriptCompile Include="src\def\elements\IDefTargetDefinition.ts" />
+    <TypeScriptCompile Include="src\def\elements\IDefTrigger.ts" />
+    <TypeScriptCompile Include="src\def\elements\Tags.ts" />
+    <TypeScriptCompile Include="src\def\helper\defAction\DefBuffAction.ts" />
+    <TypeScriptCompile Include="src\def\helper\defTargetDefinition\SimpleTargetDefinition.ts" />
+    <TypeScriptCompile Include="src\def\helper\defTargetDefinition\_OPTIONAL_TARGET.ts" />
+    <TypeScriptCompile Include="src\def\helper\defTargetDefinition\_TARGET.ts" />
+    <TypeScriptCompile Include="src\def\helper\targetSetBuilder\builders\EntitySetBuilder.ts" />
+    <TypeScriptCompile Include="src\def\helper\targetSetBuilder\builders\TriggerSetBuilder.ts" />
+    <TypeScriptCompile Include="src\def\helper\targetSetBuilder\filters\Filters.ts" />
+    <TypeScriptCompile Include="src\def\helper\targetSetBuilder\filters\TargetFilters.ts" />
+    <TypeScriptCompile Include="src\def\helper\targetSetBuilder\filters\StandardFilters.ts" />
+    <TypeScriptCompile Include="src\def\helper\targetSetBuilder\ITargetSetBuilder.ts" />
+    <TypeScriptCompile Include="src\def\helper\targetSetBuilder\TargetFinder.ts" />
+    <TypeScriptCompile Include="src\def\helper\trigger\AuraGenerator.ts" />
+    <TypeScriptCompile Include="src\def\helper\trigger\Deathrattle.ts" />
+    <TypeScriptCompile Include="src\def\helper\trigger\Enrage.ts" />
+    <TypeScriptCompile Include="src\def\helper\trigger\LifeLink.ts" />
+    <TypeScriptCompile Include="src\def\outdated\action\AllTargetsDefAction.ts" />
+    <TypeScriptCompile Include="src\def\outdated\action\SingleTargetDefAction.ts" />
+    <TypeScriptCompile Include="src\def\outdated\action\TwoStepsTargetsDefAction.ts" />
     <TypeScriptCompile Include="src\hs\event\DamageEvents.ts" />
     <TypeScriptCompile Include="src\hs\event\DrawCardEvents.ts" />
     <TypeScriptCompile Include="src\hs\event\HealEvents.ts" />
+    <TypeScriptCompile Include="src\hs\event\TurnEvents.ts" />
     <TypeScriptCompile Include="src\hs\factories\HsActionFactory.ts" />
     <TypeScriptCompile Include="src\hs\factories\HsEnchantmentActionFactory.ts" />
     <TypeScriptCompile Include="src\hs\factories\HsEntityFactory.ts" />
@@ -103,9 +104,9 @@
     <TypeScriptCompile Include="src\hs\hsActions\outdated\SilenceAMinion.ts" />
     <TypeScriptCompile Include="src\hs\hsActions\PlayCard\OutermostPhaseEnd.ts" />
     <TypeScriptCompile Include="src\hs\hsActions\PlayCard\PayCostAndRemoveFromHand.ts" />
-    <TypeScriptCompile Include="src\hs\hsActions\PlayCard\PlayMinionSequence.ts" />
-    <TypeScriptCompile Include="src\hs\hsActions\PlayCard\PlaySpellSequence.ts" />
-    <TypeScriptCompile Include="src\hs\hsActions\PlayCard\PlayWeaponSequence.ts" />
+    <TypeScriptCompile Include="src\hs\hsActions\coreActions\PlayMinionSequence.ts" />
+    <TypeScriptCompile Include="src\hs\hsActions\coreActions\PlaySpellSequence.ts" />
+    <TypeScriptCompile Include="src\hs\hsActions\coreActions\PlayWeaponSequence.ts" />
     <TypeScriptCompile Include="src\hs\hsActions\PlayCard\prototypes\AuraUpdateStep.ts" />
     <TypeScriptCompile Include="src\hs\hsActions\PlayCard\prototypes\Battlecry.ts" />
     <TypeScriptCompile Include="src\hs\hsActions\PlayCard\prototypes\DeathCreationStep.ts" />
