--- a/HsLogic/HsLogic.csproj
+++ b/HsLogic/HsLogic.csproj
@@ -35,14 +35,17 @@
     <TypeScriptCompile Include="src\core\Entity.ts" />
     <TypeScriptCompile Include="src\core\Zone.ts" />
     <TypeScriptCompile Include="src\core\ZoneExceptions.ts" />
-    <TypeScriptCompile Include="src\def\helper\defAction\AttackHealthEnchant.ts" />
+    <TypeScriptCompile Include="src\def\mechanics\onPlayMechanics\AttackHealthEnchant.ts" />
     <TypeScriptCompile Include="src\hsTest\DrawTest.ts" />
     <TypeScriptCompile Include="src\hs\Const.ts" />
     <TypeScriptCompile Include="src\hs\core\Action.ts" />
     <TypeScriptCompile Include="src\hs\core\ActionEvent.ts" />
+    <TypeScriptCompile Include="src\hs\core\context\EventManager.ts" />
     <TypeScriptCompile Include="src\hs\core\context\GameBoard.ts" />
     <TypeScriptCompile Include="src\hs\core\context\HsContext.ts" />
     <TypeScriptCompile Include="src\hs\core\context\IContextUtils.ts" />
+    <TypeScriptCompile Include="src\hs\core\context\LethalMonitor.ts" />
+    <TypeScriptCompile Include="src\hs\model\card\Hero.ts" />
     <TypeScriptCompile Include="src\hs\model\Zone.ts" />
     <TypeScriptCompile Include="src\def\Aliases.ts" />
     <TypeScriptCompile Include="src\def\Const.ts" />
@@ -51,23 +54,20 @@
     <TypeScriptCompile Include="src\def\elements\IDefEntities.ts" />
     <TypeScriptCompile Include="src\def\elements\IDefTargetDefinition.ts" />
     <TypeScriptCompile Include="src\def\elements\IDefTrigger.ts" />
-    <TypeScriptCompile Include="src\def\elements\Tags.ts" />
-    <TypeScriptCompile Include="src\def\helper\defAction\DefBuffAction.ts" />
-    <TypeScriptCompile Include="src\def\helper\defTargetDefinition\SimpleTargetDefinition.ts" />
-    <TypeScriptCompile Include="src\def\helper\targetSetBuilder\builders\EntitySetBuilder.ts" />
-    <TypeScriptCompile Include="src\def\helper\targetSetBuilder\builders\TriggerSetBuilder.ts" />
-    <TypeScriptCompile Include="src\def\helper\targetSetBuilder\filters\Filters.ts" />
-    <TypeScriptCompile Include="src\def\helper\targetSetBuilder\filters\TargetFilters.ts" />
-    <TypeScriptCompile Include="src\def\helper\targetSetBuilder\filters\StandardFilters.ts" />
-    <TypeScriptCompile Include="src\def\helper\targetSetBuilder\ITargetSetBuilder.ts" />
-    <TypeScriptCompile Include="src\def\helper\targetSetBuilder\TargetFinder.ts" />
-    <TypeScriptCompile Include="src\def\helper\trigger\AuraGenerator.ts" />
-    <TypeScriptCompile Include="src\def\helper\trigger\Deathrattle.ts" />
-    <TypeScriptCompile Include="src\def\helper\trigger\Enrage.ts" />
-    <TypeScriptCompile Include="src\def\helper\trigger\LifeLink.ts" />
-    <TypeScriptCompile Include="src\def\outdated\action\AllTargetsDefAction.ts" />
-    <TypeScriptCompile Include="src\def\outdated\action\SingleTargetDefAction.ts" />
-    <TypeScriptCompile Include="src\def\outdated\action\TwoStepsTargetsDefAction.ts" />
+    <TypeScriptCompile Include="src\def\helper\Tags.ts" />
+    <TypeScriptCompile Include="src\def\helper\ActionBuilder.ts" />
+    <TypeScriptCompile Include="src\def\helper\SimpleTargetDefinition.ts" />
+    <TypeScriptCompile Include="src\def\helper\targetFinder\builders\EntitySetBuilder.ts" />
+    <TypeScriptCompile Include="src\def\helper\targetFinder\builders\TriggerSetBuilder.ts" />
+    <TypeScriptCompile Include="src\def\helper\targetFinder\filters\Filters.ts" />
+    <TypeScriptCompile Include="src\def\helper\targetFinder\filters\TargetFilters.ts" />
+    <TypeScriptCompile Include="src\def\helper\targetFinder\filters\StandardFilters.ts" />
+    <TypeScriptCompile Include="src\def\helper\targetFinder\ITargetSetBuilder.ts" />
+    <TypeScriptCompile Include="src\def\helper\targetFinder\TargetFinder.ts" />
+    <TypeScriptCompile Include="src\def\mechanics\Aura.ts" />
+    <TypeScriptCompile Include="src\def\mechanics\Deathrattle.ts" />
+    <TypeScriptCompile Include="src\def\mechanics\Enrage.ts" />
+    <TypeScriptCompile Include="src\def\mechanics\LifeLink.ts" />
     <TypeScriptCompile Include="src\hs\event\DamageEvents.ts" />
     <TypeScriptCompile Include="src\hs\event\DrawCardEvents.ts" />
     <TypeScriptCompile Include="src\hs\event\HealEvents.ts" />
