--- a/HsCardSets/.settings/com.palantir.typescript.prefs
+++ b/HsCardSets/.settings/com.palantir.typescript.prefs
@@ -7,13 +7,15 @@ compiler.inlineSourceMap=false
 compiler.inlineSources=false
 compiler.jsx=NONE
 compiler.mapSourceFiles=false
-compiler.moduleGenTarget=ES6
-compiler.noEmitOnError=true
+compiler.moduleGenTarget=NONE
+compiler.moduleResolution=CLASSIC
+compiler.noFallthroughCasesInSwitch=true
 compiler.noImplicitAny=true
+compiler.noImplicitReturns=true
 compiler.noLib=false
 compiler.outputDirOption=dist
-compiler.outputFileOption=jsProject6.js
-compiler.removeComments=true
+compiler.outputFileOption=HsCardSets.js
+compiler.removeComments=false
 compiler.suppressExcessPropertyErrors=false
 compiler.suppressImplicitAnyIndexErrors=false
 eclipse.preferences.version=1
