--- a/HsLogic/.settings/com.palantir.typescript.prefs
+++ b/HsLogic/.settings/com.palantir.typescript.prefs
@@ -8,6 +8,7 @@ compiler.inlineSources=false
 compiler.jsx=NONE
 compiler.mapSourceFiles=false
 compiler.moduleGenTarget=NONE
+compiler.moduleResolution=CLASSIC
 compiler.noFallthroughCasesInSwitch=true
 compiler.noImplicitAny=true
 compiler.noImplicitReturns=true
