--- a/HsLogic/HsLogic.csproj
+++ b/HsLogic/HsLogic.csproj
@@ -35,8 +35,30 @@
     <TypeScriptCompile Include="src\core\Entity.ts" />
     <TypeScriptCompile Include="src\core\Zone.ts" />
     <TypeScriptCompile Include="src\core\ZoneExceptions.ts" />
+    <TypeScriptCompile Include="src\def\Aliases.ts" />
+    <TypeScriptCompile Include="src\def\Const.ts" />
+    <TypeScriptCompile Include="src\def\elements\IDefAction.ts" />
+    <TypeScriptCompile Include="src\def\elements\IDefEntities.ts" />
+    <TypeScriptCompile Include="src\def\elements\IDefMetadata.ts" />
+    <TypeScriptCompile Include="src\def\elements\IDefTargetDefinition.ts" />
+    <TypeScriptCompile Include="src\def\elements\IDefTrigger.ts" />
+    <TypeScriptCompile Include="src\def\helper\ActionBuilder.ts" />
+    <TypeScriptCompile Include="src\def\helper\SimpleTargetDefinition.ts" />
+    <TypeScriptCompile Include="src\def\helper\targetFinder\builders\EntitySetBuilder.ts" />
+    <TypeScriptCompile Include="src\def\helper\targetFinder\builders\TriggerSetBuilder.ts" />
+    <TypeScriptCompile Include="src\def\helper\targetFinder\filters\Filters.ts" />
+    <TypeScriptCompile Include="src\def\helper\targetFinder\filters\StandardFilters.ts" />
+    <TypeScriptCompile Include="src\def\helper\targetFinder\filters\TargetFilters.ts" />
+    <TypeScriptCompile Include="src\def\helper\targetFinder\ITargetSetBuilder.ts" />
+    <TypeScriptCompile Include="src\def\helper\targetFinder\TargetFinder.ts" />
+    <TypeScriptCompile Include="src\def\mechanics\Aura.ts" />
+    <TypeScriptCompile Include="src\def\mechanics\Deathrattle.ts" />
+    <TypeScriptCompile Include="src\def\mechanics\Enrage.ts" />
+    <TypeScriptCompile Include="src\def\mechanics\LifeLink.ts" />
     <TypeScriptCompile Include="src\def\mechanics\onPlayMechanics\AttackHealthEnchant.ts" />
+    <TypeScriptCompile Include="src\def\mechanics\Tags.ts" />
     <TypeScriptCompile Include="src\hsTest\DrawTest.ts" />
+    <TypeScriptCompile Include="src\hsTest\HsTestFramework.ts" />
     <TypeScriptCompile Include="src\hs\Const.ts" />
     <TypeScriptCompile Include="src\hs\core\Action.ts" />
     <TypeScriptCompile Include="src\hs\core\ActionEvent.ts" />
@@ -46,41 +68,20 @@
     <TypeScriptCompile Include="src\hs\core\context\IContextUtils.ts" />
     <TypeScriptCompile Include="src\hs\core\context\LethalMonitor.ts" />
     <TypeScriptCompile Include="src\hs\core\context\PowerManager.ts" />
-    <TypeScriptCompile Include="src\hs\model\card\Hero.ts" />
-    <TypeScriptCompile Include="src\hs\model\mechanic\enchantments\TagManagerEnchantment.ts" />
-    <TypeScriptCompile Include="src\hs\model\mechanic\enchantments\AttackHealthEnchantment.ts" />
-    <TypeScriptCompile Include="src\hs\model\Zone.ts" />
-    <TypeScriptCompile Include="src\def\Aliases.ts" />
-    <TypeScriptCompile Include="src\def\Const.ts" />
-    <TypeScriptCompile Include="src\def\elements\IDefAction.ts" />
-    <TypeScriptCompile Include="src\def\elements\IDefMetadata.ts" />
-    <TypeScriptCompile Include="src\def\elements\IDefEntities.ts" />
-    <TypeScriptCompile Include="src\def\elements\IDefTargetDefinition.ts" />
-    <TypeScriptCompile Include="src\def\elements\IDefTrigger.ts" />
-    <TypeScriptCompile Include="src\def\mechanics\Tags.ts" />
-    <TypeScriptCompile Include="src\def\helper\ActionBuilder.ts" />
-    <TypeScriptCompile Include="src\def\helper\SimpleTargetDefinition.ts" />
-    <TypeScriptCompile Include="src\def\helper\targetFinder\builders\EntitySetBuilder.ts" />
-    <TypeScriptCompile Include="src\def\helper\targetFinder\builders\TriggerSetBuilder.ts" />
-    <TypeScriptCompile Include="src\def\helper\targetFinder\filters\Filters.ts" />
-    <TypeScriptCompile Include="src\def\helper\targetFinder\filters\TargetFilters.ts" />
-    <TypeScriptCompile Include="src\def\helper\targetFinder\filters\StandardFilters.ts" />
-    <TypeScriptCompile Include="src\def\helper\targetFinder\ITargetSetBuilder.ts" />
-    <TypeScriptCompile Include="src\def\helper\targetFinder\TargetFinder.ts" />
-    <TypeScriptCompile Include="src\def\mechanics\Aura.ts" />
-    <TypeScriptCompile Include="src\def\mechanics\Deathrattle.ts" />
-    <TypeScriptCompile Include="src\def\mechanics\Enrage.ts" />
-    <TypeScriptCompile Include="src\def\mechanics\LifeLink.ts" />
     <TypeScriptCompile Include="src\hs\event\DamageEvents.ts" />
     <TypeScriptCompile Include="src\hs\event\DrawCardEvents.ts" />
     <TypeScriptCompile Include="src\hs\event\HealEvents.ts" />
     <TypeScriptCompile Include="src\hs\event\TurnEvents.ts" />
+    <TypeScriptCompile Include="src\hs\factories\GlobalActionFactory.ts" />
     <TypeScriptCompile Include="src\hs\factories\HsActionFactory.ts" />
     <TypeScriptCompile Include="src\hs\factories\HsEnchantmentActionFactory.ts" />
     <TypeScriptCompile Include="src\hs\factories\HsEntityFactory.ts" />
     <TypeScriptCompile Include="src\hs\factories\MakeChoiceActionFactory.ts" />
     <TypeScriptCompile Include="src\hs\hsActions\coreActions\DrawCard.ts" />
     <TypeScriptCompile Include="src\hs\hsActions\coreActions\PlayCardSequence.ts" />
+    <TypeScriptCompile Include="src\hs\hsActions\coreActions\PlayMinionSequence.ts" />
+    <TypeScriptCompile Include="src\hs\hsActions\coreActions\PlaySpellSequence.ts" />
+    <TypeScriptCompile Include="src\hs\hsActions\coreActions\PlayWeaponSequence.ts" />
     <TypeScriptCompile Include="src\hs\hsActions\damage\CalculateAndDealDamage.ts" />
     <TypeScriptCompile Include="src\hs\hsActions\damage\CalculateAndSplitDamage.ts" />
     <TypeScriptCompile Include="src\hs\hsActions\damage\DamageCommons.ts" />
@@ -105,25 +106,26 @@
     <TypeScriptCompile Include="src\hs\hsActions\outdated\SilenceAMinion.ts" />
     <TypeScriptCompile Include="src\hs\hsActions\PlayCard\OutermostPhaseEnd.ts" />
     <TypeScriptCompile Include="src\hs\hsActions\PlayCard\PayCostAndRemoveFromHand.ts" />
-    <TypeScriptCompile Include="src\hs\hsActions\coreActions\PlayMinionSequence.ts" />
-    <TypeScriptCompile Include="src\hs\hsActions\coreActions\PlaySpellSequence.ts" />
-    <TypeScriptCompile Include="src\hs\hsActions\coreActions\PlayWeaponSequence.ts" />
     <TypeScriptCompile Include="src\hs\hsActions\PlayCard\prototypes\AuraUpdateStep.ts" />
     <TypeScriptCompile Include="src\hs\hsActions\PlayCard\prototypes\Battlecry.ts" />
     <TypeScriptCompile Include="src\hs\hsActions\PlayCard\prototypes\DeathCreationStep.ts" />
     <TypeScriptCompile Include="src\hs\hsActions\technical\Fatigue.ts" />
     <TypeScriptCompile Include="src\hs\hsActions\technical\ShuffleDeck.ts" />
     <TypeScriptCompile Include="src\hs\hsActions\technical\ShuffleGeneratedCardIntoDeck.ts" />
-    <TypeScriptCompile Include="src\hs\model\card\Card.ts" />
     <TypeScriptCompile Include="src\hs\model\CardSet.ts" />
-    <TypeScriptCompile Include="src\hs\model\mechanic\Enchantment.ts" />
+    <TypeScriptCompile Include="src\hs\model\card\Card.ts" />
     <TypeScriptCompile Include="src\hs\model\card\GenEntity.ts" />
+    <TypeScriptCompile Include="src\hs\model\card\Hero.ts" />
     <TypeScriptCompile Include="src\hs\model\card\Minion.ts" />
     <TypeScriptCompile Include="src\hs\model\card\Player.ts" />
     <TypeScriptCompile Include="src\hs\model\card\Spell.ts" />
+    <TypeScriptCompile Include="src\hs\model\card\Weapon.ts" />
+    <TypeScriptCompile Include="src\hs\model\mechanic\Enchantment.ts" />
+    <TypeScriptCompile Include="src\hs\model\mechanic\enchantments\AttackHealthEnchantment.ts" />
+    <TypeScriptCompile Include="src\hs\model\mechanic\enchantments\TagManagerEnchantment.ts" />
     <TypeScriptCompile Include="src\hs\model\mechanic\Tag.ts" />
     <TypeScriptCompile Include="src\hs\model\mechanic\Trigger.ts" />
-    <TypeScriptCompile Include="src\hs\model\card\Weapon.ts" />
+    <TypeScriptCompile Include="src\hs\model\Zone.ts" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">12.0</VisualStudioVersion>
