--- a/JSProjectTests/.settings/com.palantir.typescript.prefs
+++ b/JSProjectTests/.settings/com.palantir.typescript.prefs
@@ -1,17 +1,20 @@
-build.path.exportedFolder=
-build.path.sourceFolder=
+build.path.exportedFolder=dist
+build.path.sourceFolder=src
 compiler.codeGenTarget=ECMASCRIPT6
-compiler.compileOnSave=true
+compiler.compileOnSave=false
 compiler.generateDeclarationFiles=false
 compiler.inlineSourceMap=false
 compiler.inlineSources=false
 compiler.jsx=NONE
 compiler.mapSourceFiles=false
 compiler.moduleGenTarget=NONE
+compiler.moduleResolution=CLASSIC
+compiler.noFallthroughCasesInSwitch=false
 compiler.noImplicitAny=true
+compiler.noImplicitReturns=false
 compiler.noLib=false
-compiler.outputDirOption=js
-compiler.outputFileOption=
+compiler.outputDirOption=dist
+compiler.outputFileOption=jsTests.js
 compiler.removeComments=false
 compiler.suppressExcessPropertyErrors=false
 compiler.suppressImplicitAnyIndexErrors=false
