--- a/HsTests/.settings/com.palantir.typescript.prefs
+++ b/HsTests/.settings/com.palantir.typescript.prefs
@@ -2,31 +2,20 @@ build.path.exportedFolder=dist
 build.path.sourceFolder=src
 compiler.codeGenTarget=ECMASCRIPT6
 compiler.compileOnSave=true
-compiler.generateDeclarationFiles=false
+compiler.generateDeclarationFiles=true
 compiler.inlineSourceMap=false
 compiler.inlineSources=false
 compiler.jsx=NONE
 compiler.mapSourceFiles=false
 compiler.moduleGenTarget=NONE
 compiler.moduleResolution=CLASSIC
-compiler.noFallthroughCasesInSwitch=false
+compiler.noFallthroughCasesInSwitch=true
 compiler.noImplicitAny=true
-compiler.noImplicitReturns=false
+compiler.noImplicitReturns=true
 compiler.noLib=false
 compiler.outputDirOption=dist
-compiler.outputFileOption=jsTests.js
+compiler.outputFileOption=HsTests.js
 compiler.removeComments=false
 compiler.suppressExcessPropertyErrors=false
 compiler.suppressImplicitAnyIndexErrors=false
 eclipse.preferences.version=1
-editor.indentSize=4
-formatter.insertSpaceAfterCommaDelimiter=true
-formatter.insertSpaceAfterFunctionKeywordForAnonymousFunctions=true
-formatter.insertSpaceAfterKeywordsInControlFlowStatements=true
-formatter.insertSpaceAfterOpeningAndBeforeClosingNonemptyParenthesis=false
-formatter.insertSpaceAfterSemicolonInForStatements=true
-formatter.insertSpaceBeforeAndAfterBinaryOperators=true
-formatter.placeOpenBraceOnNewLineForControlBlocks=false
-formatter.placeOpenBraceOnNewLineForFunctions=false
-spacesForTabs=true
-tabWidth=4
