--- a/HsTests/HsTests.csproj
+++ b/HsTests/HsTests.csproj
@@ -22,7 +22,7 @@
     <Service Include="{4A0DDDB5-7A95-4FBF-97CC-616D07737A77}" />
   </ItemGroup>
   <ItemGroup>
-    <TypeScriptCompile Include="src\HsCtxBuilder.ts" />
+    <TypeScriptCompile Include="src\BasicTest.ts" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="html\app.css" />
