--- a/HsLogic/HsLogic.csproj
+++ b/HsLogic/HsLogic.csproj
@@ -23,6 +23,9 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="src\hs\helper\" />
+    <Folder Include="src\hs\hsActions\coreActions\" />
+    <Folder Include="src\hs\hsActions\event\" />
+    <Folder Include="src\hs\hsActions\PlayCard\prototypes\" />
   </ItemGroup>
   <ItemGroup>
     <TypeScriptCompile Include="src\commons\ClassUtils.ts" />
@@ -54,10 +57,12 @@
     <TypeScriptCompile Include="src\def\helper\targetFinder\TargetFinder.ts" />
     <TypeScriptCompile Include="src\def\mechanics\Aura.ts" />
     <TypeScriptCompile Include="src\def\mechanics\Deathrattle.ts" />
+    <TypeScriptCompile Include="src\def\mechanics\Enchantment.ts" />
     <TypeScriptCompile Include="src\def\mechanics\Enrage.ts" />
     <TypeScriptCompile Include="src\def\mechanics\LifeLink.ts" />
     <TypeScriptCompile Include="src\def\mechanics\onPlayMechanics\AttackHealthEnchant.ts" />
     <TypeScriptCompile Include="src\def\mechanics\Tags.ts" />
+    <TypeScriptCompile Include="src\def\mechanics\Whenever_You_Cast_Spell.ts" />
     <TypeScriptCompile Include="src\helpers\DbgUtils.ts" />
     <TypeScriptCompile Include="src\hsTest\drawer\TestSequenceResultDrawer.ts" />
     <TypeScriptCompile Include="src\hsTest\HsCtxBuilder.ts" />
@@ -78,26 +83,30 @@
     <TypeScriptCompile Include="src\hs\event\HealEvents.ts" />
     <TypeScriptCompile Include="src\hs\event\TurnEvents.ts" />
     <TypeScriptCompile Include="src\hs\factories\GlobalActionFactory.ts" />
+    <TypeScriptCompile Include="src\hs\factories\TechActionFactory.ts" />
     <TypeScriptCompile Include="src\hs\factories\HsActionFactory.ts" />
     <TypeScriptCompile Include="src\hs\factories\HsEnchantmentActionFactory.ts" />
     <TypeScriptCompile Include="src\hs\factories\HsEntityFactory.ts" />
     <TypeScriptCompile Include="src\hs\factories\MakeChoiceActionFactory.ts" />
-    <TypeScriptCompile Include="src\hs\hsActions\coreActions\DrawCard.ts" />
-    <TypeScriptCompile Include="src\hs\hsActions\coreActions\PlayCardSequence.ts" />
-    <TypeScriptCompile Include="src\hs\hsActions\coreActions\PlayMinionSequence.ts" />
-    <TypeScriptCompile Include="src\hs\hsActions\coreActions\PlaySpellSequence.ts" />
-    <TypeScriptCompile Include="src\hs\hsActions\coreActions\PlayWeaponSequence.ts" />
+    <TypeScriptCompile Include="src\hs\hsActions\core\DrawCard.ts" />
+    <TypeScriptCompile Include="src\hs\hsActions\core\PlayCardSequence.ts" />
+    <TypeScriptCompile Include="src\hs\hsActions\core\PlayMinionSequence.ts" />
+    <TypeScriptCompile Include="src\hs\hsActions\core\PlaySpellSequence.ts" />
+    <TypeScriptCompile Include="src\hs\hsActions\core\PlayWeaponSequence.ts" />
     <TypeScriptCompile Include="src\hs\hsActions\damage\CalculateAndDealDamage.ts" />
     <TypeScriptCompile Include="src\hs\hsActions\damage\CalculateAndSplitDamage.ts" />
     <TypeScriptCompile Include="src\hs\hsActions\damage\DamageCommons.ts" />
     <TypeScriptCompile Include="src\hs\hsActions\damage\MultistepDamage.ts" />
     <TypeScriptCompile Include="src\hs\hsActions\EmptyAction.ts" />
-    <TypeScriptCompile Include="src\hs\hsActions\event\DispatchEvent.ts" />
-    <TypeScriptCompile Include="src\hs\hsActions\event\DispatchEvents.ts" />
     <TypeScriptCompile Include="src\hs\hsActions\heal\CalculateAndHeal.ts" />
     <TypeScriptCompile Include="src\hs\hsActions\heal\CalculateAndSplitHeal.ts" />
     <TypeScriptCompile Include="src\hs\hsActions\heal\HealCommons.ts" />
     <TypeScriptCompile Include="src\hs\hsActions\heal\MultistepHeal.ts" />
+    <TypeScriptCompile Include="src\hs\hsActions\main\Battlecry.ts" />
+    <TypeScriptCompile Include="src\hs\hsActions\main\DeathCreationStep.ts" />
+    <TypeScriptCompile Include="src\hs\hsActions\main\GainArmor.ts" />
+    <TypeScriptCompile Include="src\hs\hsActions\main\OutermostPhaseEnd.ts" />
+    <TypeScriptCompile Include="src\hs\hsActions\main\SummonMinion.ts" />
     <TypeScriptCompile Include="src\hs\hsActions\outdated\AddGeneratedCardIntoHand.ts" />
     <TypeScriptCompile Include="src\hs\hsActions\outdated\DestroyCardInPlay.ts" />
     <TypeScriptCompile Include="src\hs\hsActions\outdated\Discard.ts" />
@@ -108,19 +117,26 @@
     <TypeScriptCompile Include="src\hs\hsActions\outdated\PutCardIntoHand.ts" />
     <TypeScriptCompile Include="src\hs\hsActions\outdated\ReturnCardIntoHandFromPlayZone.ts" />
     <TypeScriptCompile Include="src\hs\hsActions\outdated\Sequence.ts" />
+    <TypeScriptCompile Include="src\hs\hsActions\outdated\ShuffleGeneratedCardIntoDeck.ts" />
     <TypeScriptCompile Include="src\hs\hsActions\outdated\SilenceAMinion.ts" />
-    <TypeScriptCompile Include="src\hs\hsActions\PlayCard\OutermostPhaseEnd.ts" />
-    <TypeScriptCompile Include="src\hs\hsActions\PlayCard\PayCostAndRemoveFromHand.ts" />
-    <TypeScriptCompile Include="src\hs\hsActions\PlayCard\prototypes\AuraUpdateStep.ts" />
-    <TypeScriptCompile Include="src\hs\hsActions\PlayCard\prototypes\Battlecry.ts" />
-    <TypeScriptCompile Include="src\hs\hsActions\PlayCard\prototypes\DeathCreationStep.ts" />
-    <TypeScriptCompile Include="src\hs\hsActions\technical\Fatigue.ts" />
-    <TypeScriptCompile Include="src\hs\hsActions\technical\ShuffleDeck.ts" />
-    <TypeScriptCompile Include="src\hs\hsActions\technical\ShuffleGeneratedCardIntoDeck.ts" />
+    <TypeScriptCompile Include="src\hs\hsActions\secondary\AuraUpdateStep.ts" />
+    <TypeScriptCompile Include="src\hs\hsActions\secondary\EquipHeroPower.ts" />
+    <TypeScriptCompile Include="src\hs\hsActions\secondary\Fatigue.ts" />
+    <TypeScriptCompile Include="src\hs\hsActions\secondary\PayCostAndRemoveFromHand.ts" />
+    <TypeScriptCompile Include="src\hs\hsActions\secondary\ShuffleDeck.ts" />
+    <TypeScriptCompile Include="src\hs\hsActions\technical\UnregisterTrigger.ts" />
+    <TypeScriptCompile Include="src\hs\hsActions\technical\RegisterTrigger.ts" />
+    <TypeScriptCompile Include="src\hs\hsActions\technical\AddTag.ts" />
+    <TypeScriptCompile Include="src\hs\hsActions\technical\AttachEnchantment.ts" />
+    <TypeScriptCompile Include="src\hs\hsActions\technical\DetachEnchantment.ts" />
+    <TypeScriptCompile Include="src\hs\hsActions\technical\DispatchEvent.ts" />
+    <TypeScriptCompile Include="src\hs\hsActions\technical\DispatchEvents.ts" />
+    <TypeScriptCompile Include="src\hs\hsActions\technical\RemoveTag.ts" />
     <TypeScriptCompile Include="src\hs\model\CardSet.ts" />
     <TypeScriptCompile Include="src\hs\model\card\Card.ts" />
     <TypeScriptCompile Include="src\hs\model\card\GenEntity.ts" />
     <TypeScriptCompile Include="src\hs\model\card\Hero.ts" />
+    <TypeScriptCompile Include="src\hs\model\card\HeroPower.ts" />
     <TypeScriptCompile Include="src\hs\model\card\Minion.ts" />
     <TypeScriptCompile Include="src\hs\model\card\Player.ts" />
     <TypeScriptCompile Include="src\hs\model\card\Spell.ts" />
